openshift/tuxedo/08-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tuxedo-msgsvc
  namespace: demo-tuxedo
  labels:
    app: tuxedo-msgsvc
    app.kubernetes.io/component: tuxedo
    app.kubernetes.io/part-of: tuxedo-to-camel-demo
spec:
  to:
    kind: Service
    name: tuxedo-msgsvc
    weight: 100
  port:
    targetPort: wsl
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
